--- a/.github/workflows/ro-crate-to-ghpages.yml
+++ b/.github/workflows/ro-crate-to-ghpages.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - main
 jobs:
-  build-and-deploy:
+  preview-and-commit:
     runs-on: ubuntu-22.04
     concurrency: ci-${{github.ref}}
     steps:
