--- a/.github/workflows/ro-crate-preview.yml
+++ b/.github/workflows/ro-crate-preview.yml
@@ -1,8 +1,9 @@
 name: Generate RO-Crate preview
 on:
-  push:
-    branches:
-      - main
+  paths:
+    - '**/ro-crate-metadata.json'
+  branches:
+    - main
 jobs:
   build-and-deploy:
     runs-on: ubuntu-22.04
@@ -15,7 +16,6 @@ jobs:
         uses: ResearchObject/ro-crate-preview-action@v1.3.0
         with:
           crate_path: 0.3-DRAFT
-
         
       - name: RO Crate Preview for Example Request
         uses: ResearchObject/ro-crate-preview-action@v1.3.0
