Update bagit manifests

--- a/.github/workflows/ro-crate-preview.yml
+++ b/.github/workflows/ro-crate-preview.yml
@@ -21,12 +21,12 @@ jobs:
       - name: RO Crate Preview for Example Request
         uses: ResearchObject/ro-crate-preview-action@v1.3.0
         with:
-          crate_path: 0.3-DRAFT/example-request
+          crate_path: 0.3-DRAFT/example-request/data
 
       - name: RO Crate Preview for Example Result
         uses: ResearchObject/ro-crate-preview-action@v1.3.0
         with:
-          crate_path: 0.3-DRAFT/example-result
+          crate_path: 0.3-DRAFT/example-result/data
           
       - name: Commit RO Crate Preview
         uses: swinton/commit@v2.0.0
@@ -35,7 +35,7 @@ jobs:
         with:
           files: |
             0.3-DRAFT/ro-crate-preview.html
-            0.3-DRAFT/example-request/ro-crate-preview.html
-            0.3-DRAFT/example-result/ro-crate-preview.html
+            0.3-DRAFT/example-request/data/ro-crate-preview.html
+            0.3-DRAFT/example-result/data/ro-crate-preview.html
           commit-message: |
             Updated RO-Crate preview
