--- a/.github/workflows/bagit.yml
+++ b/.github/workflows/bagit.yml
@@ -20,8 +20,8 @@ jobs:
           sha512sum data/* > manifest-sha512.txt
           sha512sum bag-info.txt bagit.txt manifest-sha512.txt > tagmanifest=sha512.txt
 
-      - name: Create BagIt manifest for Example Response
-        working-directory: 0.3-DRAFT/example-response 
+      - name: Create BagIt manifest for Example Result
+        working-directory: 0.3-DRAFT/example-result 
         run: |
           rm manifest*txt tagmanifest*txt
           sha512sum data/* > manifest-sha512.txt
