--- a/.github/workflows/20-ro-crate-preview.yml
+++ b/.github/workflows/20-ro-crate-preview.yml
@@ -1,13 +1,12 @@
 name: Generate RO-Crate preview
-concurrency:
-  group: "pages"
-  cancel-in-progress: false
+
 on:
   push:
     paths:
       - '**/ro-crate-metadata.json'
     branches:
       - main
+      
 jobs:
   build-and-deploy:
     runs-on: ubuntu-22.04
@@ -42,3 +41,6 @@ jobs:
             0.3-DRAFT/example-result/data/ro-crate-preview.html
           commit-message: |
             Updated RO-Crate preview
+
+      - name: Deploy using Jekyll
+        uses: ./.github/workflows/jekyll-gh-pages-workflow-call.yml
