Typo in tagmanifest filename

--- a/.github/workflows/80-bagit.yml
+++ b/.github/workflows/80-bagit.yml
@@ -24,15 +24,15 @@ jobs:
         working-directory: 0.3-DRAFT/example-request 
         run: |
           rm manifest*txt tagmanifest*txt
-          sha512sum data/* > manifest-sha512.txt
-          sha512sum bag-info.txt bagit.txt manifest-sha512.txt > tagmanifest=sha512.txt
+          sha512sum `find data -type f` > manifest-sha512.txt
+          sha512sum bag-info.txt bagit.txt manifest-sha512.txt > tagmanifest-sha512.txt
 
       - name: Create BagIt manifest for Example Result
         working-directory: 0.3-DRAFT/example-result 
         run: |
           rm manifest*txt tagmanifest*txt
-          sha512sum data/* > manifest-sha512.txt
-          sha512sum bag-info.txt bagit.txt manifest-sha512.txt > tagmanifest=sha512.txt
+          sha512sum `find data -type f` > manifest-sha512.txt
+          sha512sum bag-info.txt bagit.txt manifest-sha512.txt > tagmanifest-sha512.txt
 
       - name: Archive BagIts as ZIP
         working-directory: 0.3-DRAFT/
