--- a/.github/workflows/80-bagit.yml
+++ b/.github/workflows/80-bagit.yml
@@ -23,21 +23,21 @@ jobs:
       - name: Create BagIt manifest for Example Request
         working-directory: 0.3-DRAFT/example-request 
         run: |
-          rm manifest*txt tagmanifest*txt
+          rm -f manifest*txt tagmanifest*txt
           sha512sum `find data -type f` > manifest-sha512.txt
           sha512sum bag-info.txt bagit.txt manifest-sha512.txt > tagmanifest-sha512.txt
 
       - name: Create BagIt manifest for Example Result
         working-directory: 0.3-DRAFT/example-result 
         run: |
-          rm manifest*txt tagmanifest*txt
+          rm -f manifest*txt tagmanifest*txt
           sha512sum `find data -type f` > manifest-sha512.txt
           sha512sum bag-info.txt bagit.txt manifest-sha512.txt > tagmanifest-sha512.txt
 
       - name: Archive BagIts as ZIP
         working-directory: 0.3-DRAFT/
         run: |
-          rm *.zip
+          rm -f *.zip
           zip -r example-request.bagit.zip example-request/
           zip -r example-result.bagit.zip example-result/
           
