--- a/.github/workflows/90-jekyll-gh-pages.yml
+++ b/.github/workflows/90-jekyll-gh-pages.yml
@@ -1,4 +1,4 @@
-name: Deploy Jekyll with GitHub Pages dependencies preinstalled
+name: Trigger Jekyll build
 
 on:
   # Runs on pushes targeting the default branch
