--- a/.github/workflows/80-bagit.yml
+++ b/.github/workflows/80-bagit.yml
@@ -13,7 +13,7 @@ permissions:
   id-token: write      
 
 jobs:
-  build-and-deploy:
+  bagit:
     runs-on: ubuntu-22.04    
 
     steps:      
@@ -56,5 +56,6 @@ jobs:
           commit-message: |
             Updated BagIt manifests
       
-      - name: Deploy using Jekyll
-        uses: ./.github/workflows/jekyll-gh-pages-workflow-call.yml
+  deploy:            
+      uses: ./.github/workflows/jekyll-gh-pages-workflow-call.yml
+      secrets: inherit
